@@ -1,3 +1,6 @@
+Wed Nov 07 2001  Marek 'Marx' Grac <xgrac@fi.muni.cz>
+        * docs/help-system.html: updated
+
 Tue Nov 06 2001  Vitezslav Samel <samel@mail.cz>
 	* new file README.cvs: documentation file on how to access joe sources
 	via CVS
